--- a/src/less/common.less
+++ b/src/less/common.less
@@ -38,3 +38,13 @@ li {
 //.theme-border-color{
 //  border-color:@theme-color;
 //}
+
+
+//index modal
+.sign-modal-box {
+  p {
+    span {
+      .font-line(30, 30);
+    }
+  }
+}
