--- a/src/components/invite.less
+++ b/src/components/invite.less
@@ -1,54 +1,57 @@
 @import '../less/utils';
 
-.inner{
-  background: @white;
-  .padding(0,30);
-  .mtop(8);
-  .user{
-    .borderbottom(1,#e5e5e5,solid);
-    .padding(30,0);
-    img{
-      .wh(143,143);
-      display: block;
-      margin:0 auto;
-      border-radius: 100%;
-      -webkit-border-radius: 100%;
-    }
-    p{
-      color:@black;
-      .font-line(30,40);
-      text-align: center;
-      .mtop(10);
-    }
-  }
-  .mess{
-    .ptop(20);
-    .pbottom(46);
-    p{
-      .font-line(26,35);
-      color:@black;
-      text-align: center;
-      .margin(20,0);
-      a{
-        color:#ff5a00;
-        .font-line(26,35);
+.invite-wrap{
+  .inner{
+    background: @white;
+    .padding(0,30);
+    .mtop(8);
+    .user{
+      .borderbottom(1,#e5e5e5,solid);
+      .padding(30,0);
+      img{
+        .wh(143,143);
+        display: block;
+        margin:0 auto;
+        border-radius: 100%;
+        -webkit-border-radius: 100%;
       }
-      span{
-        color:#ff5a00;
-        .font-line(26,35);
+      p{
+        color:@black;
+        .font-line(30,40);
+        text-align: center;
+        .mtop(10);
       }
     }
-    .info{
-      .font-line(22,35);
-      color:#7d7d7d;
-    }
-    img{
-      .wh(273,273);
-      display: block;
-      margin:0 auto;
-      .mtop(30);
-      .mbottom(20);
+    .mess{
+      .ptop(20);
+      .pbottom(46);
+      p{
+        .font-line(26,35);
+        color:@black;
+        text-align: center;
+        .margin(20,0);
+        a{
+          color:#ff5a00;
+          .font-line(26,35);
+        }
+        span{
+          color:#ff5a00;
+          .font-line(26,35);
+        }
+      }
+      .info{
+        .font-line(22,35);
+        color:#7d7d7d;
+      }
+      img{
+        .wh(273,273);
+        display: block;
+        margin:0 auto;
+        .mtop(30);
+        .mbottom(20);
+      }
     }
   }
 }
+
 
