--- a/src/less/utils.less
+++ b/src/less/utils.less
@@ -246,6 +246,14 @@
   .px2rem(@size);
   border-bottom: @size @style @color;
 }
+.borderright(@size;@style;@color) {
+  .px2rem(@size);
+  border-right: @size @style @color;
+}
+.borderleft(@size;@style;@color) {
+  .px2rem(@size);
+  border-left: @size @style @color;
+}
 .border(@size;@color) {
   .px2rem(@size);
   border: @size solid @color;
