--- a/src/components/index.less
+++ b/src/components/index.less
@@ -237,13 +237,21 @@
               background: none;
             }
           }
-          .date-on-sign {
+          .canSign {
             i {
-              background: #fff url('../assets/images/icon-7.png') no-repeat center center;
-              background-size: auto 55%;
+              background: #fff url('../assets/images/icon-10.png') no-repeat center center;
+              background-size: auto 60%;
               .border(1, @theme-color);
             }
           }
+          .date-on-sign{
+            i {
+              background: #fff url('../assets/images/icon-9.png') no-repeat center center;
+              background-size: auto 60%;
+              .border(1, @theme-color);
+            }
+          }
+
           .date-on-sign-in {
             color: @theme-color;
             i {
@@ -341,7 +349,7 @@
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
-            
+
           }
           i {
             display: inline-block;
@@ -496,11 +504,11 @@
           top: 0;
           bottom: 0;
           margin: auto 0;
-          
+
         }
       }
     }
-    
+
   }
   .active-item {
     .margin(22, 0, 0);
@@ -721,5 +729,54 @@
       color:@white;
       text-align: center;
     }
+  }
+}
+.resign-modal-box{
+  background: rgba(0,0,0, 0.5);
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  .resign-modal-inner{
+    background: @white;
+    .border-radius(5);
+    width: 80%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    .padding(30);
+    h5 {
+      .font-line(30, 30);
+      text-align: center;
+      .padding(20, 0);
+    }
+    p {
+      .font-line(26, 34);
+      .mtop(20);
+      .mbottom(20);
+      color: #6d6c6c;
+      .pleft(40);
+      text-align: center;
+      span {
+        .font-line(26, 34);
+        .margin(0, 10);
+      }
+    }
+    .btn-sure {
+      .font-line(30, 70);
+      text-align: center;
+      color: @white;
+      .wh(200, 70);
+      display: block;
+      margin: 0 auto;
+      .mtop(40);
+      .mbottom(20);
+      .border-radius(35);
+    }
+
   }
 }
